@@ -21,6 +21,9 @@ endif
 
 if ENABLE_CHECK_PPP
 EXTRA_TEST_IMPL += ppp
+if ENABLE_CHECK_COMA
+EXTRA_TEST_IMPL += ppp::-C
+endif
 endif
 
 if ENABLE_CHECK_UTC
